fix: minimum stock on medicines
