# backend/internal/models/medicine_batch.go
@@ -13,7 +13,6 @@ type MedicineBatch struct {
 
 	Quantity     int      `gorm:"not null;check:quantity >= 0" json:"quantity"`
 	Unit         string   `gorm:"type:varchar(50);not null" json:"unit"`
-	MinimumStock int      `gorm:"not null;default:0;check:minimum_stock >= 0" json:"minimum_stock"`
 	UnitCost     *float64 `gorm:"type:decimal(15,2);check:unit_cost >= 0" json:"unit_cost"`
 	SellingPrice *float64 `gorm:"type:decimal(15,2);check:selling_price >= 0" json:"selling_price"`
 
